// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ripa Stop Reason should display new reason for stops for V2 stop 1`] = `
<div class="ripa-stop-reason tw-pb-4">
  <div class="ripa-form-header">
    <div class="row tw-ml-1 tw-mt-1"><span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate mdi mdi-alert theme--light error--text" style="font-size: 16px;"></i></span> <button type="button" class="v-icon notranslate icon v-icon--link mdi mdi-scale-balance theme--light primary--text" style="font-size: 16px;"></button>
      <div class="ripa-header"><span class="tw-text-base md:tw-text-lg tw-uppercase">Reason for Stop</span></div>
    </div>
  </div>
  <div class="container">
    <div class="row no-gutters">
      <div class="tw-pr-2 col-sm-6 col-md-6 col-12">
        <div class="tw-mr-2 tw-mt-4"><button type="button" class="tw-w-full v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content">
            Open Favorites
          </span></button></div>
      </div>
      <div class="col-sm-6 col-md-6 col-12">
        <div class="tw-mr-2 tw-mt-4"><button type="button" class="tw-w-full v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content">
              Save Reason
            </span></button></div>
      </div>
    </div>
    <div class="row no-gutters">
      <div class="tw-mb-4 col-sm-12 col-12"></div>
    </div>
    <div class="row no-gutters">
      <div class="col-sm-12 col-12">
        <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--solo-flat v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-277" class="v-input__slot">
              <div class="v-select__slot"><label for="input-277" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Reason</label>
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">Probable cause to arrest or search</div><input required="required" id="input-277" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--clear"><button type="button" aria-label="clear icon" tabindex="-1" class="v-icon notranslate v-icon--link mdi mdi-close theme--light"></button></div>
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="9">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
        <div class="ripa-check-group">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"></i><input aria-checked="true" id="input-284" role="checkbox" type="checkbox" value="1">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                </div><label for="input-284" class="v-label theme--light" style="left: 0px; position: relative;">Officer witnessed commission of a crime</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-286" role="checkbox" type="checkbox" value="2">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-286" class="v-label theme--light" style="left: 0px; position: relative;">Matched suspect description</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-288" role="checkbox" type="checkbox" value="3">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-288" class="v-label theme--light" style="left: 0px; position: relative;">Witness or victim identified stopped person as a suspect of a crime</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-290" role="checkbox" type="checkbox" value="4">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-290" class="v-label theme--light" style="left: 0px; position: relative;">Carrying suspicious object</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-292" role="checkbox" type="checkbox" value="5">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-292" class="v-label theme--light" style="left: 0px; position: relative;">Actions indicative of casing a victim or location</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-294" role="checkbox" type="checkbox" value="6">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-294" class="v-label theme--light" style="left: 0px; position: relative;">Suspected of acting as a lookout</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-296" role="checkbox" type="checkbox" value="7">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-296" class="v-label theme--light" style="left: 0px; position: relative;">Actions indicative of a drug transaction</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-298" role="checkbox" type="checkbox" value="8">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-298" class="v-label theme--light" style="left: 0px; position: relative;">Actions indicative of engaging in a violent crime</label>
              </div>
            </div>
          </div>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-300" role="checkbox" type="checkbox" value="9">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-300" class="v-label theme--light" style="left: 0px; position: relative;">Other reasonable suspicion or probable cause that a crime has occurred</label>
              </div>
            </div>
          </div>
          <div class="v-input theme--light v-input--selection-controls v-input--checkbox">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-302" role="checkbox" type="checkbox" value="10">
                  <div class="v-input--selection-controls__ripple"></div>
                </div><label for="input-302" class="v-label theme--light" style="left: 0px; position: relative;">Matched description of suspect’s vehicle or vehicle observed at the scene of a crime</label>
              </div>
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <div class="v-input tw-my-4 theme--light v-text-field v-text-field--solo-flat v-select v-autocomplete">
          <div class="v-input__control">
            <div role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-307" class="v-input__slot">
              <div class="v-select__slot"><label for="input-307" class="v-label theme--light" style="left: 0px; position: absolute;">Offense Code (Optional)</label><input id="input-307" type="text" autocomplete="off">
                <div class="v-input__append-inner">
                  <div></div>
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <div class="ripa-label tw-font-bold tw-my-4"><span>
    -- and --
  </span></div>
        <!---->
        <div class="ripa-text-input" persistent-hint="">
          <!---->
          <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><label for="input-315" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Brief Explanation</label><input id="input-315" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
        <!---->
        <div class="ripa-form-header" items="">
          <div class="row tw-ml-1 tw-mt-1"><span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate mdi mdi-alert theme--light error--text" style="font-size: 16px;"></i></span> <button type="button" class="v-icon notranslate icon v-icon--link mdi mdi-scale-balance theme--light primary--text" style="font-size: 16px;"></button>
            <div class="ripa-header"><span class="tw-text-base md:tw-text-lg tw-uppercase">The stopped person was inside a residence...</span></div>
          </div>
        </div>
        <div class="ripa-switch" style="max-width: 250px;">
          <div class="v-input v-input--reverse v-input--expand v-input--hide-details theme--light v-input--selection-controls v-input--switch">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-324" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple"></div>
                  <div class="v-input--switch__track theme--light"></div>
                  <div class="v-input--switch__thumb theme--light">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-324" class="v-label theme--light" style="left: 0px; position: relative;">
                  The stopped person was inside a residence...
                </label>
              </div>
            </div>
          </div>
        </div>
        <div class="container">
          <div class="row no-gutters">
            <div class="col-sm-12 col-12"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ripa Stop Reason should match snapshot 1`] = `
<div class="ripa-stop-reason tw-pb-4">
  <div class="ripa-form-header">
    <div class="row tw-ml-1 tw-mt-1"><span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate mdi mdi-alert theme--light error--text" style="font-size: 16px;"></i></span> <button type="button" class="v-icon notranslate icon v-icon--link mdi mdi-scale-balance theme--light primary--text" style="font-size: 16px;"></button>
      <div class="ripa-header"><span class="tw-text-base md:tw-text-lg tw-uppercase">Reason for Stop</span></div>
    </div>
  </div>
  <div class="container">
    <div class="row no-gutters">
      <div class="tw-pr-2 col-sm-6 col-md-6 col-12">
        <div class="tw-mr-2 tw-mt-4"><button type="button" class="tw-w-full v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content">
            Open Favorites
          </span></button></div>
      </div>
      <div class="col-sm-6 col-md-6 col-12">
        <div class="tw-mr-2 tw-mt-4"><button type="button" class="tw-w-full v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content">
              Save Reason
            </span></button></div>
      </div>
    </div>
    <div class="row no-gutters">
      <div class="tw-mb-4 col-sm-12 col-12"></div>
    </div>
    <div class="row no-gutters">
      <div class="col-sm-12 col-12">
        <div class="v-input theme--light v-text-field v-text-field--solo-flat v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-10" class="v-input__slot">
              <div class="v-select__slot"><label for="input-10" class="v-label theme--light" style="left: 0px; position: absolute;">Reason</label>
                <div class="v-select__selections"><input required="required" id="input-10" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
                <div class="v-input__append-inner">
                  <div></div>
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <div class="ripa-label tw-font-bold tw-my-4"><span>
    -- and --
  </span></div>
        <!---->
        <div class="ripa-text-input" persistent-hint="">
          <!---->
          <div class="v-input theme--light v-text-field">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><label for="input-18" class="v-label theme--light" style="left: 0px; position: absolute;">Brief Explanation</label><input id="input-18" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;
